:bug:(scss): Add more contrast to post meta data
See: https://wave.webaim.org/report#/https://blog.juanwolf.fr/posts/programming/getting-started-with-org-mode/

--- a/assets/scss/themes/subtile.scss
+++ b/assets/scss/themes/subtile.scss
@@ -14,7 +14,7 @@ $post-border-bottom-color: lightgray;
 $post-border-bottom-style: solid;
 $post-border-bottom-size: 1px;
 
-$post-meta-font-color: lighten($post-font-color, 75%);
+$post-meta-font-color: #595959;
 
 $post-link-color: black;
 $post-visited-link-color: black;
